--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -325,9 +325,13 @@ margin-left: 250px;
 }
 
 .collapsible:after {
-  content: '\002B';
+  content: "\2212";
   color: rgb(0, 0, 0);
   font-weight: bold;
   font-size: 20px;
   float: right;
+}
+
+.active:after {
+  content: '\002B';
 }
