--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -127,12 +127,14 @@
   </div>
 
   <div id="collapse1" class="card-body collapse show">
-    <p> Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-      3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-      Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
-      Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-      Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic
-      synth nesciunt you probably haven't heard of them accusamus labore sustainable. </p>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      Vestibulum lorem quam, scelerisque sit amet feugiat at, tristique eget elit.
+      Fusce sagittis urna nec sodales consequat.
+      Pellentesque diam dolor, iaculis feugiat lobortis commodo, pulvinar quis mauris.
+      Sed magna nunc, eleifend vel luctus ut, bibendum sit amet massa.
+      Suspendisse a mauris facilisis, scelerisque massa nec, luctus risus.
+      Duis enim elit, porta a facilisis vehicula, malesuada in ante.
+      Nulla rutrum vel felis quis consequat. </p>
 
     <div class="table-responsive" style="margin: 30px 0px 40px 40px; width: 90%;">
       <table class="table">
@@ -177,3 +179,4 @@
   </div>
 
 </div>
+
