--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -295,42 +295,68 @@ hr {
 }
 
 
-.example-box {
-  width: 200px;
-  height: 200px;
-  border: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  cursor: move;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background: #fff;
-  border-radius: 4px;
-  margin-right: 25px;
-  position: relative;
-  z-index: 1;
-  box-sizing: border-box;
-  padding: 10px;
-  transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-              0 2px 2px 0 rgba(0, 0, 0, 0.14),
-              0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
-
-.example-box:active {
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
+// dragging & collapsing window
 .example-boundary {
-  width: 400px;
-  height: 400px;
+  height: 150%;
   max-width: 100%;
-  border: dotted #ccc 2px;
+  margin-left: 0px;
 
   @include desktop {
     margin-left: 250px;
+    height: 90%;
+    max-width: 90%;
+  }
+
+  .collapsible:after {
+    content: "\2212";
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 20px;
+    float: right;
+  }
+
+  .active:after {
+    content: '\002B';
   }
 }
+
+#card {
+width: 70%;
+
+@include desktop {
+  margin-left: 250px;
+}
+}
+
+.card-header {
+  border:1px solid black;
+
+  h4 {
+    margin-bottom: -25px;
+  }
+}
+
+#collapse1 {
+  border-left: 1px solid gray;
+  border-bottom: 1px solid gray;
+  border-right: 1px solid gray;
+  padding: 0;
+  color: black;
+
+  p {
+    padding: 20px 20px 10px 20px;
+    text-indent: 5%;
+    font-size: 12px;
+
+    @include desktop {
+      font-size: 14px;
+      padding: 50px 50px 20px 50px;
+    }
+  }
+
+}
+
+
+
+
+
