--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -38,44 +38,62 @@
 
       <!-- Modal Header -->
       <div class="modal-header">
+        <i class="fa fa-2x fa-wrench fa-lg"></i>
         <h4 class="modal-title">Configuration</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <button type="button" class="close" data-dismiss="modal"
+          style="font-size:35px; padding-right:20px; outline: none;">&times;</button>
       </div>
 
       <!-- Modal body -->
       <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item">
-          <a class="nav-link" href="#profile" role="tab" data-toggle="tab">Language selection</a>
+          <a class="nav-link" href="#languages" role="tab" data-toggle="tab">Language selection</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#buzz" role="tab" data-toggle="tab">Notification types select</a>
+          <a class="nav-link" href="#notify" role="tab" data-toggle="tab">Notification types select</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#references" role="tab" data-toggle="tab">Email input</a>
+          <a class="nav-link" href="#email" role="tab" data-toggle="tab">Email input</a>
         </li>
       </ul>
 
       <!-- Tab panes -->
       <div class="tab-content">
-        <div role="tabpanel" class="tab-pane fade in active" id="profile">
-            <div class="form-group">
-              <label for="sel1">Select list (select one):</label>
-              <select class="form-control" id="sel1" [(ngModel)]='nrSelect'>
-              <option *ngFor="let langActive of arr2"  style="font-weight: 500;">
+
+        <div role="tabpanel" class="tab-pane fade in active" id="languages">
+          <div class="form-group">
+            <label for="sel1">Select list (select one):</label>
+            <select class="form-control" id="sel1" [(ngModel)]='nrSelect'>
+              <option *ngFor="let langActive of arr2" style="font-weight: 500;">
                 {{langActive}}
               </option>
-               <option *ngFor="let langNotActive of arr" [disabled]=true style="font-size:14px;">
-                 {{langNotActive}}
-               </option>
-              </select>
-            </div>
+              <option *ngFor="let langNotActive of arr" [disabled]=true style="font-size:14px;">
+                {{langNotActive}}
+              </option>
+            </select>
+          </div>
           <button class="btn btn-success">Save</button>
         </div>
-        <div role="tabpanel" class="tab-pane fade" id="buzz">
-            <button class="btn btn-warning">Save</button>
+
+        <div role="tabpanel" class="tab-pane fade" id="notify">
+          <label for="sel2"><h3>Alerts Selection</h3></label>
+          <div class="custom-control custom-switch">
+              <input type="checkbox" class="custom-control-input" id="switch1" name="example" (change)="changeEvent($event)" >
+              <label class="custom-control-label" for="switch1">Warning alert</label>
+            </div>
+            <div class="custom-control custom-switch">
+              <input type="checkbox" class="custom-control-input" id="switch2" name="example" (change)="changeEvent($event)" >
+              <label class="custom-control-label" for="switch2">Danger alert</label>
+            </div>
+            <div class="custom-control custom-switch">
+              <input type="checkbox" class="custom-control-input" id="switch3" name="example" (change)="changeEvent($event)" >
+              <label class="custom-control-label" for="switch3">Info alert</label>
+            </div>
+
+          <button class="btn btn-warning" [disabled]="toggleBool" >Save</button>
         </div>
-        <div role="tabpanel" class="tab-pane fade" id="references">
-            <button class="btn btn-primary">Save</button>
+        <div role="tabpanel" class="tab-pane fade" id="email">
+          <button class="btn btn-primary">Save</button>
         </div>
       </div>
 
