--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -18,6 +18,90 @@ $desktop: 767px;
     }
 }
 
+
+// configuration (modal)
+
+.modal-dialog {
+  width: 100%;
+
+  @include desktop {
+    margin-top: 100px;
+  }
+
+  .modal-content {
+    width: 100%;
+
+    @include desktop {
+      width: 140%;
+    }
+
+    .modal-header {
+      background-color:lightblue;
+
+      @include desktop {
+        background-color:lightblue;
+      }
+    }
+  }
+}
+
+.tab-content {
+  position: relative;
+  height: 200px;
+
+  @include desktop {
+    height: 300px;
+  }
+
+  .form-group {
+    margin-top: 20px;
+
+    @include desktop {
+      margin-top: 50px;
+    }
+
+    label {
+      margin-left: 20px;
+    }
+
+    .form-control {
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+
+      option {
+        width: 150px !important;
+      }
+    }
+  }
+
+  button {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+
+
+}
+}
+
+#notify {
+
+  h3 {
+    padding: 30px 0px 20px 20px;
+  }
+    .custom-switch {
+      padding: 0px 0px 5px 50px;
+
+      @include desktop {
+        padding: 10px 0px 5px 50px;
+      }
+    }
+  }
+
+
+
+// notifications/alerts
+
 #notification {
   float: left;
   padding-left: 0px;
