--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -78,19 +78,19 @@
         <div role="tabpanel" class="tab-pane fade" id="notify">
           <label for="sel2"><h3>Alerts Selection</h3></label>
           <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="switch1" name="example" (change)="changeEvent($event)" >
+              <input type="checkbox" class="custom-control-input" id="switch1" name="example" (change)="clickItem1();" >
               <label class="custom-control-label" for="switch1">Warning alert</label>
             </div>
             <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="switch2" name="example" (change)="changeEvent($event)" >
+              <input type="checkbox" class="custom-control-input" id="switch2" name="example" (change)="clickItem2();" >
               <label class="custom-control-label" for="switch2">Danger alert</label>
             </div>
             <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="switch3" name="example" (change)="changeEvent($event)" >
+              <input type="checkbox" class="custom-control-input" id="switch3" name="example" (change)="clickItem3();" >
               <label class="custom-control-label" for="switch3">Info alert</label>
             </div>
 
-          <button class="btn btn-warning" [disabled]="toggleBool" >Save</button>
+          <button class="btn btn-warning" [class.disabled]="!isItemClicked1 && !isItemClicked2 && !isItemClicked3" >Save</button>
         </div>
         <div role="tabpanel" class="tab-pane fade" id="email">
           <button class="btn btn-primary">Save</button>
