--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -90,7 +90,7 @@
               <label class="custom-control-label" for="switch3">Info alert</label>
             </div>
 
-          <button class="btn btn-warning" [class.disabled]="!isItemClicked1 && !isItemClicked2 && !isItemClicked3" >Save</button>
+          <button class="btn btn-warning" [disabled]="!isItemClicked1 && !isItemClicked2 && !isItemClicked3" >Save</button>
         </div>
         <div role="tabpanel" class="tab-pane fade" id="email">
           <button class="btn btn-primary">Save</button>
