--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -31,7 +31,7 @@ h2 {
 }
 
 
-/* STRUCTURE */
+// login form
 
 .wrapper {
   display: flex;
@@ -47,7 +47,6 @@ h2 {
   -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
   background: #fff;
-  padding: 30px;
   width: 90%;
   max-width: 450px;
   position: relative;
@@ -59,7 +58,6 @@ h2 {
 }
 
 
-/* FORM TYPOGRAPHY*/
 input[type=submit] {
   background-color: #56baed;
   border: none;
