--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,8 @@
         <p class="warning" *ngIf="password?.errors.required">* Password is required</p>
       </div>
     </div>
-    <input class="fadeIn fourth" (click)="passwordd.value=''; username.value=''" (click)="postProfile()"  [disabled]="form.invalid" [class.disabled]="form.invalid" type="submit" value="Log in">
+    <input class="fadeIn fourth" (click)="passwordd.value=''; username.value=''" (click)="postProfile()" [disabled]="form.invalid" [class.disabled]="form.invalid" type="submit" value="Log in">
+    <button class="btn btn-primary loader" disabled> <span class="spinner-border spinner-border-sm"></span> Loading..</button>
   </form>
 </div>
 
