--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,12 +8,12 @@
       </div>
     </div>
     <div >
-      <input class="fadeIn third" placeholder="Password" #password="ngModel" name=password [(ngModel)]="input.password" type="password" #password required id="password" value='' />
+      <input class="fadeIn third" placeholder="Password" #password="ngModel" name=password [(ngModel)]="input.password" type="password" #passwordd required id="password" value='' />
       <div *ngIf="password.errors  && (password.dirty || password.touched)">
         <p class="warning" *ngIf="password?.errors.required">* Password is required</p>
       </div>
     </div>
-    <input class="fadeIn fourth" (click)="password.value=''; username.value=''" (click)="postProfile()" [disabled]="form.invalid" [class.disabled]="form.invalid" type="submit" value="Log in">
+    <input class="fadeIn fourth" (click)="passwordd.value=''; username.value=''" (click)="postProfile()" [disabled]="form.invalid" [class.disabled]="form.invalid" type="submit" value="Log in">
     <button class="btn btn-primary loader" disabled> <span class="spinner-border spinner-border-sm"></span> Loading..</button>
   </form>
 </div>
