login section improvements

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -38,43 +38,62 @@
 
       <!-- Modal Header -->
       <div class="modal-header">
+        <i class="fa fa-2x fa-wrench fa-lg"></i>
         <h4 class="modal-title">Configuration</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <button type="button" class="close" data-dismiss="modal"
+          style="font-size:35px; padding-right:20px; outline: none;">&times;</button>
       </div>
 
       <!-- Modal body -->
       <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item">
-          <a class="nav-link" href="#profile" role="tab" data-toggle="tab">Language selection</a>
+          <a class="nav-link" href="#languages" role="tab" data-toggle="tab">Language selection</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#buzz" role="tab" data-toggle="tab">Notification types select</a>
+          <a class="nav-link" href="#notify" role="tab" data-toggle="tab">Notification types select</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#references" role="tab" data-toggle="tab">Email input</a>
+          <a class="nav-link" href="#email" role="tab" data-toggle="tab">Email input</a>
         </li>
       </ul>
 
       <!-- Tab panes -->
       <div class="tab-content">
-        <div role="tabpanel" class="tab-pane fade in active" id="profile">
-            <div class="form-group">
-              <label for="sel1">Select list (select one):</label>
-              <select class="form-control" id="sel1" [(ngModel)]="langSelected">
-               <option *ngFor="let lang of Languages" [value]="lang.code">
-                 <!-- <i *ngIf="lang.nativeName == this.compare" > -->
-                 {{lang.name}}
-                 <!-- </i> -->
-               </option>
-              </select>
-            </div>
+
+        <div role="tabpanel" class="tab-pane fade in active" id="languages">
+          <div class="form-group">
+            <label for="sel1">Select list (select one):</label>
+            <select class="form-control" id="sel1" [(ngModel)]='nrSelect'>
+              <option *ngFor="let langActive of arr2" style="font-weight: 500;">
+                {{langActive}}
+              </option>
+              <option *ngFor="let langNotActive of arr" [disabled]=true style="font-size:14px;">
+                {{langNotActive}}
+              </option>
+            </select>
+          </div>
           <button class="btn btn-success">Save</button>
         </div>
-        <div role="tabpanel" class="tab-pane fade" id="buzz">
-            <button class="btn btn-warning">Save</button>
+
+        <div role="tabpanel" class="tab-pane fade" id="notify">
+          <label for="sel2"><h3>Alerts Selection</h3></label>
+          <div class="custom-control custom-switch">
+              <input type="checkbox" class="custom-control-input" id="switch1" name="example" (change)="clickItem1();" >
+              <label class="custom-control-label" for="switch1">Warning alert</label>
+            </div>
+            <div class="custom-control custom-switch">
+              <input type="checkbox" class="custom-control-input" id="switch2" name="example" (change)="clickItem2();" >
+              <label class="custom-control-label" for="switch2">Danger alert</label>
+            </div>
+            <div class="custom-control custom-switch">
+              <input type="checkbox" class="custom-control-input" id="switch3" name="example" (change)="clickItem3();" >
+              <label class="custom-control-label" for="switch3">Info alert</label>
+            </div>
+
+          <button class="btn btn-warning" [disabled]="!isItemClicked1 && !isItemClicked2 && !isItemClicked3" >Save</button>
         </div>
-        <div role="tabpanel" class="tab-pane fade" id="references">
-            <button class="btn btn-primary">Save</button>
+        <div role="tabpanel" class="tab-pane fade" id="email">
+          <button class="btn btn-primary">Save</button>
         </div>
       </div>
 
@@ -145,62 +164,64 @@
   </div>
 </div>
 
-<div id="card" class="card" cdkDragBoundary=".example-boundary" cdkDrag>
-  <div class="card-header" id="heading1">
-    <h4>Data window</h4>
-    <a data-toggle="collapse" href="#collapse1" class="collapsible"></a>
-  </div>
-
-  <div id="collapse1" class="card-body collapse show">
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum lorem quam, scelerisque sit amet feugiat at, tristique eget elit.
-      Fusce sagittis urna nec sodales consequat.
-      Pellentesque diam dolor, iaculis feugiat lobortis commodo, pulvinar quis mauris.
-      Sed magna nunc, eleifend vel luctus ut, bibendum sit amet massa.
-      Suspendisse a mauris facilisis, scelerisque massa nec, luctus risus.
-      Duis enim elit, porta a facilisis vehicula, malesuada in ante.
-      Nulla rutrum vel felis quis consequat. </p>
-
-    <div class="table-responsive" style="margin: 30px 0px 40px 40px; width: 90%;">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Age</th>
-            <th>City</th>
-            <th>Country</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Matt</td>
-            <td>Pitt</td>
-            <td>25</td>
-            <td>Chicago</td>
-            <td>USA</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>John</td>
-            <td>Henry</td>
-            <td>16</td>
-            <td>Boston</td>
-            <td>USA</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Susan</td>
-            <td>Doe</td>
-            <td>44</td>
-            <td>Washington</td>
-            <td>USA</td>
-          </tr>
-        </tbody>
-      </table>
+<div class="example-boundary">
+  <div id="card" class="card" cdkDragBoundary=".example-boundary" cdkDrag>
+    <div class="card-header" id="heading1">
+      <h4>Data window</h4>
+      <a data-toggle="collapse" href="#collapse1" class="collapsible"></a>
     </div>
-  </div>
 
+    <div id="collapse1" class="card-body collapse show">
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Vestibulum lorem quam, scelerisque sit amet feugiat at, tristique eget elit.
+        Fusce sagittis urna nec sodales consequat.
+        Pellentesque diam dolor, iaculis feugiat lobortis commodo, pulvinar quis mauris.
+        Sed magna nunc, eleifend vel luctus ut, bibendum sit amet massa.
+        Suspendisse a mauris facilisis, scelerisque massa nec, luctus risus.
+        Duis enim elit, porta a facilisis vehicula, malesuada in ante.
+        Nulla rutrum vel felis quis consequat. </p>
+
+      <div class="table-responsive" style="margin: 30px 0px 40px 40px; width: 90%;">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Firstname</th>
+              <th>Lastname</th>
+              <th>Age</th>
+              <th>City</th>
+              <th>Country</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Matt</td>
+              <td>Pitt</td>
+              <td>25</td>
+              <td>Chicago</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>John</td>
+              <td>Henry</td>
+              <td>16</td>
+              <td>Boston</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Susan</td>
+              <td>Doe</td>
+              <td>44</td>
+              <td>Washington</td>
+              <td>USA</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+  </div>
 </div>
