--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -76,24 +76,38 @@
         </div>
 
         <div role="tabpanel" class="tab-pane fade" id="notify">
-          <label for="sel2"><h3>Alerts Selection</h3></label>
+          <label for="sel2">
+            <h3>Alerts Selection</h3>
+          </label>
           <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="switch1" name="example" (change)="clickItem1();" >
-              <label class="custom-control-label" for="switch1">Warning alert</label>
-            </div>
-            <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="switch2" name="example" (change)="clickItem2();" >
-              <label class="custom-control-label" for="switch2">Danger alert</label>
-            </div>
-            <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="switch3" name="example" (change)="clickItem3();" >
-              <label class="custom-control-label" for="switch3">Info alert</label>
-            </div>
-
-          <button class="btn btn-warning" [disabled]="!isItemClicked1 && !isItemClicked2 && !isItemClicked3" >Save</button>
+            <input type="checkbox" class="custom-control-input" id="switch1" name="example" (change)="clickItem1();">
+            <label class="custom-control-label" for="switch1">Warning alert</label>
+          </div>
+          <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="switch2" name="example" (change)="clickItem2();">
+            <label class="custom-control-label" for="switch2">Danger alert</label>
+          </div>
+          <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="switch3" name="example" (change)="clickItem3();">
+            <label class="custom-control-label" for="switch3">Info alert</label>
+          </div>
+          <button class="btn btn-warning"
+            [disabled]="!isItemClicked1 && !isItemClicked2 && !isItemClicked3">Save</button>
         </div>
+
         <div role="tabpanel" class="tab-pane fade" id="email">
-          <button class="btn btn-primary">Save</button>
+          <form id="myform" action="#" method="get" #form="ngForm">
+            <p>
+              <label id="emailField" for="email">Email: </label>
+              <br>
+              <input class="form-control" name="email" id="email" value="" required="required" aria-required="true"
+                pattern="^(([-\w\d]+)(\.[-\w\d]+)*@([-\w\d]+)(\.[-\w\d]+)*(\.([a-zA-Z]{2,5}|[\d]{1,3})){1,2})$"
+                title="Your email address" type="email" spellcheck="false" size="30" />
+                <br>
+                <i id="emailMsg" style="color:red; visibility: hidden;">* Wrong email !</i>
+            </p>
+          </form>
+          <button class="btn btn-primary" id="saveEmail">Save</button>
         </div>
       </div>
 
