--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -45,6 +45,7 @@ $desktop: 767px;
   }
 }
 
+  // configuration - languages section
 .tab-content {
   position: relative;
   height: 200px;
@@ -79,24 +80,48 @@ $desktop: 767px;
     position: absolute;
     bottom: 20px;
     right: 20px;
-
-
-}
+  }
 }
 
+  // configuration - notification section
 #notify {
 
   h3 {
-    padding: 30px 0px 20px 20px;
+    padding: 30px 0px 10px 20px;
   }
     .custom-switch {
       padding: 0px 0px 5px 50px;
 
       @include desktop {
-        padding: 10px 0px 5px 50px;
+        padding: 10px 0px 5px 80px;
       }
     }
   }
+
+  // configuration - email section
+  #myform {
+
+    padding: 50px 30px 30px 30px;
+
+    input, textarea {
+      border: 1px solid #333;
+      padding: 3px 5px;
+    }
+    input[aria-invalid="true"], textarea[aria-invalid="true"] {
+      border: 2px solid #f00;
+      box-shadow: 0 0 4px 0 #f00;
+      color:red;
+      font-weight: 500;
+    }
+
+    form p label {
+      display: inline-block;
+      width: 7em;
+    }
+  }
+
+
+
 
 
 
@@ -436,6 +461,7 @@ width: 70%;
   }
 
 }
+
 
 
 
