clicked list elements appears on main content

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -7,10 +7,6 @@ $desktop: 767px;
 }
 
 
-html {
-  background-color: #56baed;
-}
-
 body {
   font-family: "Poppins", sans-serif;
   height: 100vh;
@@ -37,6 +33,45 @@ h2 {
 }
 
 
+// login section
+.alert {
+  padding: 10px;
+  width: 90%;
+  text-align: center;
+  opacity: 0;
+
+  @include desktop {
+  width: 20%;
+  }
+}
+
+.alertError {
+  -webkit-animation-name: showError;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+  animation-name: showError;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes showError {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes showError {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 // login form
 
 .wrapper {
@@ -47,21 +82,21 @@ h2 {
   width: 100%;
   min-height: 100%;
   padding: 20px;
-}
+
 
 .loader {
   position:absolute;
-  width: 200px; 
-  height: 49px; 
-  top: 52%; 
+  width: 200px;
+  height: 49px;
+  top: 55%;
   left: 17%;
   visibility: hidden;
 
   @include desktop {
     position:absolute;
-    width: 200px; 
-    height: 49px; 
-    top: 52%; 
+    width: 200px;
+    height: 49px;
+    top: 55%;
     left: 28%;
     visibility: hidden;
   }
@@ -70,14 +105,16 @@ h2 {
 #formContent {
   -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
-  background: #fff;
+  background: -moz-linear-gradient(top, #d9a7ff 0%, #cd71ff 9%, #cd71ff 26%, #e09dff 74%, #e09dff 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #d9a7ff 0%,#cd71ff 9%,#cd71ff 26%,#e09dff 74%,#e09dff 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #d9a7ff 0%,#cd71ff 9%,#cd71ff 26%,#e09dff 74%,#e09dff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   width: 90%;
   max-width: 450px;
   position: relative;
-  height: 300px;
-  padding: 0px;
-  -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  height: 350px;
+  padding-top: 20px;
+  -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.4);
+  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.4);
   text-align: center;
 }
 
@@ -96,7 +133,7 @@ input[type=submit] {
   box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
-  margin: 5px 20px 40px 20px;
+  margin: 20px 20px 40px 20px;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -105,7 +142,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover  {
-  background-color: #39ace7;
+  background-color: #56ed5e;
 }
 
 .disabled {
@@ -154,12 +191,11 @@ input[type=text]:focus, input[type=password]:focus {
 input[type=text]:placeholder, input[type=password]:placeholder{
   color: #cccccc;
 }
+}
 
 
+/* ANIMATIONS for login form */
 
-/* ANIMATIONS */
-
-/* Simple CSS3 Fade-in-down Animation */
 .fadeInDown {
   -webkit-animation-name: fadeInDown;
   animation-name: fadeInDown;
@@ -195,7 +231,6 @@ input[type=text]:placeholder, input[type=password]:placeholder{
   }
 }
 
-/* Simple CSS3 Fade-in Animation */
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@@ -233,7 +268,6 @@ input[type=text]:placeholder, input[type=password]:placeholder{
   animation-delay: 1s;
 }
 
-/* Simple CSS3 Fade-in Animation */
 .underlineHover:after {
   display: block;
   left: 0;
