--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -64,10 +64,10 @@
           <div class="form-group">
             <label for="sel1">Select list (select one):</label>
             <select class="form-control" id="sel1" [(ngModel)]='nrSelect'>
-              <option *ngFor="let langActive of arr2" style="font-weight: 500;">
+              <option *ngFor=" let langActive of arr2" style="font-weight: 500;">
                 {{langActive}}
               </option>
-              <option *ngFor="let langNotActive of arr" [disabled]=true style="font-size:14px;">
+              <option *ngFor=" let langNotActive of arr" [disabled]=true style="font-size:14px;">
                 {{langNotActive}}
               </option>
             </select>
@@ -76,24 +76,38 @@
         </div>
 
         <div role="tabpanel" class="tab-pane fade" id="notify">
-          <label for="sel2"><h3>Alerts Selection</h3></label>
+          <label for="sel2">
+            <h3>Alerts Selection</h3>
+          </label>
           <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="switch1" name="example" (change)="clickItem1();" >
-              <label class="custom-control-label" for="switch1">Warning alert</label>
-            </div>
-            <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="switch2" name="example" (change)="clickItem2();" >
-              <label class="custom-control-label" for="switch2">Danger alert</label>
-            </div>
-            <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="switch3" name="example" (change)="clickItem3();" >
-              <label class="custom-control-label" for="switch3">Info alert</label>
-            </div>
-
-          <button class="btn btn-warning" [disabled]="!isItemClicked1 && !isItemClicked2 && !isItemClicked3" >Save</button>
+            <input type="checkbox" class="custom-control-input" id="switch1" name="example" (change)="clickItem1();">
+            <label class="custom-control-label" for="switch1">Warning alert</label>
+          </div>
+          <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="switch2" name="example" (change)="clickItem2();">
+            <label class="custom-control-label" for="switch2">Danger alert</label>
+          </div>
+          <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="switch3" name="example" (change)="clickItem3();">
+            <label class="custom-control-label" for="switch3">Info alert</label>
+          </div>
+          <button class="btn btn-warning"
+            [disabled]="!isItemClicked1 && !isItemClicked2 && !isItemClicked3">Save</button>
         </div>
+
         <div role="tabpanel" class="tab-pane fade" id="email">
-          <button class="btn btn-primary">Save</button>
+          <form id="myform" action="#" method="get" #form="ngForm">
+            <p>
+              <label id="emailField" for="email">Email: </label>
+              <br>
+              <input class="form-control" name="email" id="email" value="" required="required" aria-required="true"
+                pattern="^(([-\w\d]+)(\.[-\w\d]+)*@([-\w\d]+)(\.[-\w\d]+)*(\.([a-zA-Z]{2,5}|[\d]{1,3})){1,2})$"
+                title="Your email address" type="email" spellcheck="false" size="30" />
+              <br>
+              <i id="emailMsg" style="color:red; visibility: hidden;">* Wrong email !</i>
+            </p>
+          </form>
+          <button class="btn btn-primary" id="saveEmail">Save</button>
         </div>
       </div>
 
@@ -116,54 +130,40 @@
 
     <ul id="menu-content" class="menu-content collapse out">
 
-      <li>
-        <i class="fa fa-dashboard fa-lg"></i> Dashboard
-      </li>
-
-      <li data-toggle="collapse" data-target="#statistics" class="collapsed">
+      <li (click)="onItemClickMain('Dashboard')"><i class="fa fa-dashboard fa-lg"></i> Dashboard </li>
+      <li (click)="onItemClickMain('Statistics')" data-toggle="collapse" data-target="#statistics" class="collapsed">
         <i class="fa fa-area-chart fa-lg"></i> Statistics <span class="arrow"></span>
       </li>
 
       <ul class="sub-menu collapse" id="statistics">
-        <li>Tests</li>
-        <li>Devices</li>
-        <li>Builds</li>
-        <li>Services</li>
-        <li>Projects</li>
+        <li *ngFor=" let item of listItems; let i = index" (click)="onItemClick('Statistics',i)">{{ item }}</li>
       </ul>
 
-      <li data-toggle="collapse" data-target="#reports" class="collapsed">
+      <li (click)="onItemClickMain('Reports')" data-toggle="collapse" data-target="#reports" class="collapsed">
         <i class="fa fa-file-text fa-lg"></i> Reports <span class="arrow"></span>
       </li>
 
       <ul class="sub-menu collapse" id="reports">
-        <li>Tests</li>
-        <li>Devices</li>
-        <li>Builds</li>
-        <li>Services</li>
-        <li>Projects</li>
+        <li *ngFor=" let item of listItems; let i = index" (click)="onItemClick('Reports',i)">{{ item }}</li>
       </ul>
 
-      <li>
-        <i class="fa fa-wrench fa-lg"></i> Configurations
-      </li>
+      <li (click)="onItemClickMain('Configurations')"><i class="fa fa-wrench fa-lg"></i> Configurations </li>
 
-      <li data-toggle="collapse" data-target="#overview" class="collapsed">
+      <li (click)="onItemClickMain('Overview')" data-toggle="collapse" data-target="#overview" class="collapsed">
         <i class="fa fa-book fa-lg"></i> Overview <span class="arrow"></span>
       </li>
 
       <ul class="sub-menu collapse" id="overview">
-        <li>Tests</li>
-        <li>Devices</li>
-        <li>Builds</li>
-        <li>Services</li>
-        <li>Projects</li>
+        <li *ngFor=" let item of listItems; let i = index" (click)="onItemClick('Overview',i)">{{ item }}</li>
       </ul>
 
     </ul>
   </div>
 </div>
 
+
+<!-- main content -->
+<p id="txt" style="position: absolute; left: 50%;">rfreferferfref </p>
 <div class="example-boundary">
   <div id="card" class="card" cdkDragBoundary=".example-boundary" cdkDrag>
     <div class="card-header" id="heading1">
