--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<!-- navbar -->
+<!-- sticky navbar -->
 
 <div id="navbar">
   <div id="notification" class="container">
@@ -57,7 +57,7 @@
         </li>
       </ul>
 
-      <!-- Tab panes -->
+      <!-- Tabs -->
       <div class="tab-content">
 
         <div role="tabpanel" class="tab-pane fade in active" id="languages">
@@ -163,7 +163,8 @@
 
 
 <!-- main content -->
-<p id="txt" style="position: absolute; left: 50%;">rfreferferfref </p>
+<p id="txt"></p>
+
 <div class="example-boundary">
   <div id="card" class="card" cdkDragBoundary=".example-boundary" cdkDrag>
     <div class="card-header" id="heading1">
