--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,14 +1,3 @@
-body {
-  margin: 0px;
-  padding: 0px;
-}
-
-.header {
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
-}
-
 
 $desktop: 767px;
 
@@ -18,115 +7,21 @@ $desktop: 767px;
     }
 }
 
-
-// configuration (modal)
-
-.modal-dialog {
-  width: 100%;
-
-  @include desktop {
-    margin-top: 100px;
-  }
-
-  .modal-content {
-    width: 100%;
-
-    @include desktop {
-      width: 140%;
-    }
-
-    .modal-header {
-      background-color:lightblue;
-
-      @include desktop {
-        background-color:lightblue;
-      }
-    }
-  }
+body {
+  margin: 0px;
+  padding: 0px;
 }
 
-  // configuration - languages section
-.tab-content {
-  position: relative;
-  height: 200px;
-
-  @include desktop {
-    height: 300px;
-  }
-
-  .form-group {
-    margin-top: 20px;
-
-    @include desktop {
-      margin-top: 50px;
-    }
-
-    label {
-      margin-left: 20px;
-    }
-
-    .form-control {
-      width: 80%;
-      margin-left: auto;
-      margin-right: auto;
-
-      option {
-        width: 150px !important;
-      }
-    }
-  }
-
-  button {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-  }
-}
-
-  // configuration - notification section
-#notify {
-
-  h3 {
-    padding: 30px 0px 10px 20px;
-  }
-    .custom-switch {
-      padding: 0px 0px 5px 50px;
-
-      @include desktop {
-        padding: 10px 0px 5px 80px;
-      }
-    }
-  }
-
-  // configuration - email section
-  #myform {
-
-    padding: 50px 30px 30px 30px;
-
-    input, textarea {
-      border: 1px solid #333;
-      padding: 3px 5px;
-    }
-    input[aria-invalid="true"], textarea[aria-invalid="true"] {
-      border: 2px solid #f00;
-      box-shadow: 0 0 4px 0 #f00;
-      color:red;
-      font-weight: 500;
-    }
-
-    form p label {
-      display: inline-block;
-      width: 7em;
-    }
-  }
-
-
-
+/*  Overview
+1. top navbar
+2. Configuration window (modal)
+3. Left sticky menu
+4. Main Content
+*/
 
 
 
 // notifications/alerts
-
 #notification {
   float: left;
   padding-left: 0px;
@@ -243,21 +138,127 @@ hr {
   color: white;
 }
 
-.content {
-  padding: 16px;
-}
 
-.sticky {
-  position: fixed;
-  top: 0;
+// configuration (modal)
+
+.modal-dialog {
   width: 100%;
+
+  @include desktop {
+    margin-top: 100px;
+  }
+
+  .modal-content {
+    width: 100%;
+
+    @include desktop {
+      width: 140%;
+    }
+
+    .modal-header {
+      background-color:lightblue;
+
+      @include desktop {
+        background-color:lightblue;
+      }
+    }
+  }
 }
 
-.sticky + .content {
-  padding-top: 60px;
+  // configuration - languages section
+.tab-content {
+  position: relative;
+  height: 200px;
+
+  @include desktop {
+    height: 300px;
+  }
+
+  .form-group {
+    margin-top: 20px;
+
+    @include desktop {
+      margin-top: 50px;
+    }
+
+    label {
+      margin-left: 20px;
+    }
+
+    .form-control {
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+
+      option {
+        width: 150px !important;
+      }
+    }
+  }
+
+  button {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+  }
 }
 
+  // configuration - notification section
+#notify {
 
+  h3 {
+    padding: 30px 0px 10px 20px;
+  }
+    .custom-switch {
+      padding: 0px 0px 5px 50px;
+
+      @include desktop {
+        padding: 10px 0px 5px 80px;
+      }
+    }
+  }
+
+  // configuration - email section
+  #myform {
+
+    padding: 50px 30px 30px 30px;
+
+    input, textarea {
+      border: 1px solid #333;
+      padding: 3px 5px;
+    }
+    input[aria-invalid="true"], textarea[aria-invalid="true"] {
+      border: 2px solid #f00;
+      box-shadow: 0 0 4px 0 #f00;
+      color:red;
+      font-weight: 500;
+    }
+
+    form p label {
+      display: inline-block;
+      width: 7em;
+    }
+  }
+
+
+// .content {
+//   padding: 16px;
+// }
+
+// .sticky {
+//   position: fixed;
+//   top: 0;
+//   width: 100%;
+// }
+
+// .sticky + .content {
+//   padding-top: 60px;
+// }
+
+
+
+
+// left side menu
 .nav-side-menu {
   overflow: auto;
   font-family: verdana;
@@ -270,10 +271,9 @@ hr {
   width: 250px;
   color: #e1ffff;
 
-@include desktop {
-  height: 100%;
-}
-
+  @include desktop {
+    height: 100%;
+  }
 }
 
 .fa {
@@ -404,14 +404,30 @@ hr {
 }
 
 
-// dragging & collapsing window
+
+// main content window
+#txt {
+  position: absolute;
+  left: 30%;
+
+  @include desktop {
+    position: absolute;
+    left: 50%;
+    font-weight: 500;
+  }
+}
+
+
+// dragging & collapsing window (main-content)
 .example-boundary {
   height: 150%;
   max-width: 100%;
   margin-left: 0px;
+  padding-top: 50px;
 
   @include desktop {
     margin-left: 250px;
+    padding-top: 30px;
     height: 90%;
     max-width: 90%;
   }
