--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -77,7 +77,7 @@
 
         <div role="tabpanel" class="tab-pane fade" id="notify">
           <label for="sel2">
-            <h3>Alerts Selection</h3>
+            <h3>Alerts Selection</h3> <p style="padding-left:20px;">(turn on switch and wait 5-10s)</p>
           </label>
           <div class="custom-control custom-switch">
             <input type="checkbox" class="custom-control-input" id="switch1" name="example" (change)="clickItem1();">
@@ -98,7 +98,7 @@
         <div role="tabpanel" class="tab-pane fade" id="email">
           <form id="myform" action="#" method="get" #form="ngForm">
             <p>
-              <label id="emailField" for="email">Email: </label>
+              <label id="emailField" for="email">Email: (real-time validation) </label>
               <br>
               <input class="form-control" name="email" id="email" value="" required="required" aria-required="true"
                 pattern="^(([-\w\d]+)(\.[-\w\d]+)*@([-\w\d]+)(\.[-\w\d]+)*(\.([a-zA-Z]{2,5}|[\d]{1,3})){1,2})$"
