--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-  <a href="/login">Logout</a>
+  <a href="#" (click)="ReturnToLogin()">Logout</a>
   <a href="/configuration" data-toggle="modal" data-target="#myModal">Configuration</a>
 </div>
 
